infrastructure/wade/pihole/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pihole.hewett.club
      secretName: pihole-tls
  rules:
    - host: pihole.hewett.club
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pihole
                port:
                  number: 80
